--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
-   <h1>Regina's Website</h1>
-   
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css">
+    </head>
+    <body>
+        <h1>Regina's Website</h1>
+    </body>
 </html>
 
 
