--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css">
     </head>
     <body>
-        <h1>Regina's Website</h1>
+        <div class="container">
+            <div class="row">
+                 <h1 class="page-header">Regina's Website</h1>
+            </div>
+            <div class="row">
+                 <div class="panel">
+                    Cool Project
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
