--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div class="row">
                  <div class="panel">
                     Cool Project
+                    <p>This is A REALLLY coOOL projectttt</p>
                 </div>
             </div>
         </div>
