--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
                  <div class="panel">
                     Cool Project
                     <p>This is A REALLLY coOOL projectttt</p>
+                    
                 </div>
             </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>
     </body>
 </html>
 
