--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
             <div class="row">
                  <div class="panel">
                     Cool Project
-                    <p>This is A REALLLY coOOL projectttt</p>
+                    <p>This is a website</p>
                     
                 </div>
             </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.js">
+        </script>
     </body>
 </html>
 
