--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             </div>
             <div class="row">
                  <div class="panel">
-                    Cool Project
-                    <p>This is a website</p>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                        Cool Project
+                    </button>
                     
                 </div>
             </div>
